加入date列 中间还有问题

--- a/etherscan/test_address23.ipynb
+++ b/etherscan/test_address23.ipynb
@@ -39,13 +39,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-01-20 12:03:40,380 - INFO - Start block: 21038905, End block: 21282523\n",
-      "2025-01-20 12:03:40,381 - INFO - Fetching ERC20 transfers from block 21038905 to 21282523...\n",
-      "2025-01-20 12:03:42,400 - INFO - Page 1: Retrieved 596 transactions.\n",
-      "2025-01-20 12:03:44,572 - WARNING - API request failed on page 2: Request failed: No transactions found\n",
-      "2025-01-20 12:03:44,594 - INFO - Final dataset contains 596 unique transactions.\n",
-      "2025-01-20 12:03:44,937 - INFO - Data successfully saved to C:\\Users\\HUAWEI\\Documents\\GitHub\\Project\\etherscan\\address2\\erc20_transfers.csv\n",
-      "2025-01-20 12:03:44,943 - INFO - Transfers saved to C:\\Users\\HUAWEI\\Documents\\GitHub\\Project\\etherscan\\address2\n"
+      "2025-01-20 19:33:01,621 - INFO - Start block: 21038905, End block: 21282523\n",
+      "2025-01-20 19:33:01,624 - INFO - Fetching ERC20 transfers from block 21038905 to 21282523...\n",
+      "2025-01-20 19:33:03,610 - INFO - Page 1: Retrieved 596 transactions.\n",
+      "2025-01-20 19:33:04,891 - WARNING - API request failed on page 2: Request failed: No transactions found\n",
+      "2025-01-20 19:33:04,902 - INFO - Final dataset contains 596 unique transactions.\n",
+      "2025-01-20 19:33:04,978 - INFO - Data successfully saved to C:\\Users\\HUAWEI\\Documents\\GitHub\\Project\\etherscan\\address2\\erc20_transfers.csv\n",
+      "2025-01-20 19:33:04,978 - INFO - Transfers saved to C:\\Users\\HUAWEI\\Documents\\GitHub\\Project\\etherscan\\address2\n"
      ]
     },
     {
@@ -62,15 +62,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-01-20 12:03:55,328 - INFO - Start block: 21038905, End block: 21282523\n",
-      "2025-01-20 12:03:55,328 - INFO - Fetching ERC20 transfers from block 21038905 to 21282523...\n",
-      "2025-01-20 12:03:58,239 - INFO - Page 1: Retrieved 1000 transactions.\n",
-      "2025-01-20 12:04:00,089 - INFO - Page 2: Retrieved 1000 transactions.\n",
-      "2025-01-20 12:04:02,040 - INFO - Page 3: Retrieved 474 transactions.\n",
-      "2025-01-20 12:04:03,214 - WARNING - API request failed on page 4: Request failed: No transactions found\n",
-      "2025-01-20 12:04:03,273 - INFO - Final dataset contains 2474 unique transactions.\n",
-      "2025-01-20 12:04:03,692 - INFO - Data successfully saved to C:\\Users\\HUAWEI\\Documents\\GitHub\\Project\\etherscan\\address3\\erc20_transfers.csv\n",
-      "2025-01-20 12:04:03,700 - INFO - Transfers saved to C:\\Users\\HUAWEI\\Documents\\GitHub\\Project\\etherscan\\address3\n"
+      "2025-01-20 19:33:10,116 - INFO - Start block: 21038905, End block: 21282523\n",
+      "2025-01-20 19:33:10,120 - INFO - Fetching ERC20 transfers from block 21038905 to 21282523...\n",
+      "2025-01-20 19:33:12,254 - INFO - Page 1: Retrieved 1000 transactions.\n",
+      "2025-01-20 19:33:13,998 - INFO - Page 2: Retrieved 1000 transactions.\n",
+      "2025-01-20 19:33:15,791 - INFO - Page 3: Retrieved 474 transactions.\n",
+      "2025-01-20 19:33:16,971 - WARNING - API request failed on page 4: Request failed: No transactions found\n",
+      "2025-01-20 19:33:16,986 - INFO - Final dataset contains 2474 unique transactions.\n",
+      "2025-01-20 19:33:17,283 - INFO - Data successfully saved to C:\\Users\\HUAWEI\\Documents\\GitHub\\Project\\etherscan\\address3\\erc20_transfers.csv\n",
+      "2025-01-20 19:33:17,283 - INFO - Transfers saved to C:\\Users\\HUAWEI\\Documents\\GitHub\\Project\\etherscan\\address3\n"
      ]
     },
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2498,7 +2498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2519,7 +2519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2527,19 +2527,19 @@
      "output_type": "stream",
      "text": [
       "Band-wise PnL Summary:\n",
-      "+------------------+--------------+--------------+--------------+---------------+----------------+\n",
-      "| Band             |   ETH_Amount |   Band_Value |   Open_Price |   Close_Price |            PnL |\n",
-      "+==================+==============+==============+==============+===============+================+\n",
-      "| Eighteenth Band  |     11483.61 |        35.82 |      3120.00 |       3108.34 |  1087281691.91 |\n",
-      "+------------------+--------------+--------------+--------------+---------------+----------------+\n",
-      "| Fifteenth Band   |     12222.55 |        35.70 |      2906.94 |       3033.01 |  1159665724.62 |\n",
-      "+------------------+--------------+--------------+--------------+---------------+----------------+\n",
-      "| Fourteenth Band  |      1125.42 |         2.73 |      2430.69 |       2425.97 |  -107331738.83 |\n",
-      "+------------------+--------------+--------------+--------------+---------------+----------------+\n",
-      "| Seventeenth Band |     23421.76 |        76.00 |      3340.13 |       3180.00 |   -86529916.91 |\n",
-      "+------------------+--------------+--------------+--------------+---------------+----------------+\n",
-      "| Unassigned Band  |     47045.99 |       176.79 |      2575.91 |       3512.67 | -2732488743.56 |\n",
-      "+------------------+--------------+--------------+--------------+---------------+----------------+\n",
+      "+------------------+-------------------------------------------+--------------+--------------+--------------+---------------+----------------+\n",
+      "| Band             | Time_Range                                |   ETH_Amount |   Band_Value |   Open_Price |   Close_Price |            PnL |\n",
+      "+==================+===========================================+==============+==============+==============+===============+================+\n",
+      "| Eighteenth Band  | 2024-11-19 07:17:59 - 2024-11-19 09:43:11 |     11483.61 |        35.82 |      3120.00 |       3108.34 |  1087281691.91 |\n",
+      "+------------------+-------------------------------------------+--------------+--------------+--------------+---------------+----------------+\n",
+      "| Fifteenth Band   | 2024-11-08 01:43:11 - 2024-11-08 02:12:59 |     12222.55 |        35.70 |      2906.94 |       3033.01 |  1159665724.62 |\n",
+      "+------------------+-------------------------------------------+--------------+--------------+--------------+---------------+----------------+\n",
+      "| Fourteenth Band  | 2024-11-05 23:17:47 - 2024-11-05 23:24:35 |      1125.42 |         2.73 |      2430.69 |       2425.97 |  -107331738.83 |\n",
+      "+------------------+-------------------------------------------+--------------+--------------+--------------+---------------+----------------+\n",
+      "| Seventeenth Band | 2024-11-12 00:59:47 - 2024-11-18 18:27:23 |     23421.76 |        76.00 |      3340.13 |       3180.00 |   -86529916.91 |\n",
+      "+------------------+-------------------------------------------+--------------+--------------+--------------+---------------+----------------+\n",
+      "| Unassigned Band  | 2024-10-31 14:22:47 - 2024-11-27 14:45:35 |     47045.99 |       176.79 |      2575.91 |       3512.67 | -2732488743.56 |\n",
+      "+------------------+-------------------------------------------+--------------+--------------+--------------+---------------+----------------+\n",
       "Band-wise PnL summary saved to band_pnl_summary.csv\n"
      ]
     }
@@ -2554,6 +2554,7 @@
     "\n",
     "    # Group by band and calculate summary metrics\n",
     "    band_summary = record_df.groupby('Band').agg(\n",
+    "        Time_Range=('Date', lambda x: f\"{x.min().strftime('%Y-%m-%d %H:%M:%S')} - {x.max().strftime('%Y-%m-%d %H:%M:%S')}\"),  # Time range        \n",
     "        ETH_Amount=('amount', 'sum'),  # Sum of ETH amounts\n",
     "        Band_Value=('amount', lambda x: (x * record_df.loc[x.index, 'price']).sum() / 1e6),  # Convert to million USD\n",
     "        Open_Price=('price', 'first'),  # First price in the band\n",
