对pnl分析绘图

--- a/stable_dashboard/data_fetch.ipynb
+++ b/stable_dashboard/data_fetch.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -33,17 +33,17 @@
      "output_type": "stream",
      "text": [
       "         name           tvl\n",
-      "16   Ethereum  7.180617e+10\n",
-      "47     Solana  8.736776e+09\n",
-      "92       Tron  7.465960e+09\n",
-      "54    Bitcoin  6.945383e+09\n",
-      "10        BSC  5.664515e+09\n",
-      "11       Base  3.715635e+09\n",
-      "18   Arbitrum  3.193690e+09\n",
-      "95        Sui  1.695768e+09\n",
-      "13  Avalanche  1.449431e+09\n",
-      "17    Polygon  1.156530e+09\n",
-      "59      Aptos  1.144239e+09\n"
+      "16   Ethereum  5.698114e+10\n",
+      "49     Solana  1.008245e+10\n",
+      "56    Bitcoin  6.867289e+09\n",
+      "94       Tron  5.649744e+09\n",
+      "10        BSC  4.981577e+09\n",
+      "17       Base  2.975321e+09\n",
+      "19   Arbitrum  2.633880e+09\n",
+      "97        Sui  1.474867e+09\n",
+      "14  Avalanche  1.247957e+09\n",
+      "22       CORE  8.917046e+08\n",
+      "61      Aptos  8.571662e+08\n"
      ]
     }
    ],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,10 +257,10 @@
       "Saved fee data for Ethereum to ./data\\fee\\01_Ethereum_fee.csv\n",
       "Saved tvl data for Solana to ./data\\tvl\\02_Solana_tvl.csv\n",
       "Saved fee data for Solana to ./data\\fee\\02_Solana_fee.csv\n",
-      "Saved tvl data for Tron to ./data\\tvl\\03_Tron_tvl.csv\n",
-      "Saved fee data for Tron to ./data\\fee\\03_Tron_fee.csv\n",
-      "Saved tvl data for Bitcoin to ./data\\tvl\\04_Bitcoin_tvl.csv\n",
-      "Saved fee data for Bitcoin to ./data\\fee\\04_Bitcoin_fee.csv\n",
+      "Saved tvl data for Bitcoin to ./data\\tvl\\03_Bitcoin_tvl.csv\n",
+      "Saved fee data for Bitcoin to ./data\\fee\\03_Bitcoin_fee.csv\n",
+      "Saved tvl data for Tron to ./data\\tvl\\04_Tron_tvl.csv\n",
+      "Saved fee data for Tron to ./data\\fee\\04_Tron_fee.csv\n",
       "Saved tvl data for BSC to ./data\\tvl\\05_BSC_tvl.csv\n",
       "Saved fee data for BSC to ./data\\fee\\05_BSC_fee.csv\n",
       "Saved tvl data for Base to ./data\\tvl\\06_Base_tvl.csv\n",
@@ -271,30 +271,30 @@
       "Saved fee data for Sui to ./data\\fee\\08_Sui_fee.csv\n",
       "Saved tvl data for Avalanche to ./data\\tvl\\09_Avalanche_tvl.csv\n",
       "Saved fee data for Avalanche to ./data\\fee\\09_Avalanche_fee.csv\n",
-      "Saved tvl data for Polygon to ./data\\tvl\\10_Polygon_tvl.csv\n",
-      "Saved fee data for Polygon to ./data\\fee\\10_Polygon_fee.csv\n",
+      "Saved tvl data for CORE to ./data\\tvl\\10_CORE_tvl.csv\n",
+      "Saved fee data for CORE to ./data\\fee\\10_CORE_fee.csv\n",
       "Saved tvl data for Aptos to ./data\\tvl\\11_Aptos_tvl.csv\n",
       "Saved fee data for Aptos to ./data\\fee\\11_Aptos_fee.csv\n",
       "Saved volume data for Ethereum to ./data\\volume\\01_Ethereum_volume.csv\n",
       "Saved volume data for Solana to ./data\\volume\\02_Solana_volume.csv\n",
-      "Saved volume data for Tron to ./data\\volume\\03_Tron_volume.csv\n",
       "Skipping Bitcoin for volume\n",
+      "Saved volume data for Tron to ./data\\volume\\04_Tron_volume.csv\n",
       "Saved volume data for BSC to ./data\\volume\\05_BSC_volume.csv\n",
       "Saved volume data for Base to ./data\\volume\\06_Base_volume.csv\n",
       "Saved volume data for Arbitrum to ./data\\volume\\07_Arbitrum_volume.csv\n",
       "Saved volume data for Sui to ./data\\volume\\08_Sui_volume.csv\n",
       "Saved volume data for Avalanche to ./data\\volume\\09_Avalanche_volume.csv\n",
-      "Saved volume data for Polygon to ./data\\volume\\10_Polygon_volume.csv\n",
+      "Saved volume data for CORE to ./data\\volume\\10_CORE_volume.csv\n",
       "Saved volume data for Aptos to ./data\\volume\\11_Aptos_volume.csv\n",
       "Columns in DataFrame for Ethereum: Index(['low', 'updatedAt', 'timestamp', 'open', 'volume', 'high', 'close',\n",
       "       'instrument'],\n",
       "      dtype='object')\n",
       "       low      updatedAt  timestamp     open    volume     high    close  \\\n",
-      "0   1078.2  1669161249514 2022-11-21  1140.89  48191112     1148  1107.25   \n",
-      "1  1072.45  1669247905888 2022-11-22  1106.88  40048819  1142.86  1139.13   \n",
-      "2  1127.11  1669334259732 2022-11-23  1134.15  35853278  1191.63  1184.37   \n",
-      "3  1180.58  1669420571251 2022-11-24  1181.62  28742857   1217.6  1203.07   \n",
-      "4  1168.13  1669506970007 2022-11-25  1194.34  24973788  1209.53  1198.75   \n",
+      "0     1261  1673222328312 2023-01-07  1270.32   5933532  1270.63   1263.8   \n",
+      "1  1259.03  1673308730957 2023-01-08  1261.04  14243959     1298  1290.07   \n",
+      "2  1288.44  1673395038444 2023-01-09  1294.97  35620462  1344.49   1320.4   \n",
+      "3  1316.72  1673481286544 2023-01-10  1327.68  19836150  1348.46  1335.16   \n",
+      "4     1321  1673567884635 2023-01-11   1337.3  24683385  1408.43  1389.66   \n",
       "\n",
       "                 instrument  \n",
       "0  ETHUSDT-OKX-00000000-FUT  \n",
@@ -306,12 +306,12 @@
       "Columns in DataFrame for Solana: Index(['low', 'updatedAt', 'timestamp', 'open', 'volume', 'high', 'close',\n",
       "       'instrument'],\n",
       "      dtype='object')\n",
-      "     low      updatedAt  timestamp   open    volume   high  close  \\\n",
-      "0  11.25  1669161413670 2022-11-21  12.25  11323859  12.25  11.83   \n",
-      "1   10.9  1669247588051 2022-11-22  11.78   9759895  12.51  12.44   \n",
-      "2  12.52  1669333939502 2022-11-23   12.6  14339244  14.75  14.35   \n",
-      "3  13.82  1669420736394 2022-11-24  14.12  11395942  14.95  14.61   \n",
-      "4  13.89  1669507133812 2022-11-25  14.16   5898925   14.5  14.02   \n",
+      "      low      updatedAt  timestamp    open    volume    high   close  \\\n",
+      "0  13.011  1673222002540 2023-01-07  13.443   6758031  13.473  13.095   \n",
+      "1  12.888  1673308405099 2023-01-08  12.909  19908333  14.988  14.468   \n",
+      "2  14.714  1673395178978 2023-01-09  14.956  38462333  17.493  16.276   \n",
+      "3  15.532  1673481426366 2023-01-10  16.578  19630239  16.752    16.2   \n",
+      "4   15.27  1673567559438 2023-01-11   16.16  14466039  16.616  16.364   \n",
       "\n",
       "                 instrument  \n",
       "0  SOLUSDT-OKX-00000000-FUT  \n",
@@ -320,20 +320,15 @@
       "3  SOLUSDT-OKX-00000000-FUT  \n",
       "4  SOLUSDT-OKX-00000000-FUT  \n",
       "Saved price data for Solana to ./data\\price\\02_Solana_price.csv\n",
-      "Columns in DataFrame for Tron: RangeIndex(start=0, stop=0, step=1)\n",
-      "Empty DataFrame\n",
-      "Columns: []\n",
-      "Index: []\n",
-      "No valid data found for Tron. Skipping.\n",
       "Columns in DataFrame for Bitcoin: Index(['low', 'updatedAt', 'timestamp', 'open', 'volume', 'high', 'close',\n",
       "       'instrument'],\n",
       "      dtype='object')\n",
-      "       low      updatedAt  timestamp     open    volume     high    close  \\\n",
-      "0  15438.8  1669161129115 2022-11-21  16272.1  12880851  16332.3    15782   \n",
-      "1  15629.8  1669247785602 2022-11-22  15872.2   9882221  16326.9  16229.3   \n",
-      "2  16168.8  1669334138459 2022-11-23    16187  10608899  16743.7    16606   \n",
-      "3  16462.3  1669420449694 2022-11-24  16562.4   7205909  16813.3    16607   \n",
-      "4    16350  1669506850078 2022-11-25  16530.6   5660628  16632.2  16523.9   \n",
+      "       low      updatedAt  timestamp     open   volume     high    close  \\\n",
+      "0  16910.7  1673222208817 2023-01-07  16976.1  1382745  16981.2  16946.8   \n",
+      "1  16915.1  1673308611361 2023-01-08  16925.7  3184015  17189.5  17129.9   \n",
+      "2    17130  1673394918987 2023-01-09  17186.9  7140506  17399.7  17180.9   \n",
+      "3  17151.8  1673481167351 2023-01-10  17221.6  5341206  17487.9    17437   \n",
+      "4  17319.9  1673567765121 2023-01-11    17464  7079374  18005.3    17943   \n",
       "\n",
       "                 instrument  \n",
       "0  BTCUSDT-OKX-00000000-FUT  \n",
@@ -341,16 +336,21 @@
       "2  BTCUSDT-OKX-00000000-FUT  \n",
       "3  BTCUSDT-OKX-00000000-FUT  \n",
       "4  BTCUSDT-OKX-00000000-FUT  \n",
-      "Saved price data for Bitcoin to ./data\\price\\04_Bitcoin_price.csv\n",
+      "Saved price data for Bitcoin to ./data\\price\\03_Bitcoin_price.csv\n",
+      "Columns in DataFrame for Tron: RangeIndex(start=0, stop=0, step=1)\n",
+      "Empty DataFrame\n",
+      "Columns: []\n",
+      "Index: []\n",
+      "No valid data found for Tron. Skipping.\n",
       "Columns in DataFrame for BSC: Index(['low', 'updatedAt', 'timestamp', 'open', 'volume', 'high', 'close',\n",
       "       'instrument'],\n",
       "      dtype='object')\n",
       "      low      updatedAt  timestamp    open   volume    high   close  \\\n",
-      "0     240  1671925989522 2022-12-23  252.74  1655098  256.41  245.91   \n",
-      "1  242.83  1672012450690 2022-12-24  245.31  1210262  245.99  244.54   \n",
-      "2  240.99  1672099082999 2022-12-25  245.73  1501865  245.74  243.26   \n",
-      "3     242  1672185127520 2022-12-26  242.62  1515794  245.51  244.24   \n",
-      "4  242.26  1672271784814 2022-12-27  243.35  2346471  249.24  246.42   \n",
+      "0  259.69  1673222197981 2023-01-07  263.23  1618957  263.23  261.06   \n",
+      "1  260.07  1673308600530 2023-01-08  260.39  4114493  276.98     275   \n",
+      "2  271.25  1673394908128 2023-01-09  278.56  4387978  283.76  272.58   \n",
+      "3  270.09  1673481156511 2023-01-10  276.09  2731282  278.69   276.9   \n",
+      "4  273.98  1673567754349 2023-01-11  276.73  4292628  287.88  284.79   \n",
       "\n",
       "                 instrument  \n",
       "0  BNBUSDT-OKX-00000000-FUT  \n",
@@ -401,12 +401,12 @@
       "Columns in DataFrame for Avalanche: Index(['low', 'updatedAt', 'timestamp', 'open', 'volume', 'high', 'close',\n",
       "       'instrument'],\n",
       "      dtype='object')\n",
-      "     low      updatedAt  timestamp   open  volume   high  close  \\\n",
-      "0  11.55  1669161545325 2022-11-21  12.11  826767  12.16   11.8   \n",
-      "1  11.42  1669247720021 2022-11-22  11.93  883759  12.37  12.34   \n",
-      "2  12.41  1669334071865 2022-11-23  12.44  731356  13.07  13.06   \n",
-      "3  12.75  1669420383566 2022-11-24  12.96  557318   13.4  12.96   \n",
-      "4  12.53  1669506784695 2022-11-25  12.83  417116  13.03  12.82   \n",
+      "     low      updatedAt  timestamp   open   volume   high  close  \\\n",
+      "0  11.64  1673222132955 2023-01-07  11.84   381479  11.87  11.74   \n",
+      "1  11.59  1673308535856 2023-01-08  11.65   602950  12.15  12.09   \n",
+      "2  12.07  1673394842818 2023-01-09  12.37  2039162  12.65  12.18   \n",
+      "3  12.01  1673481556655 2023-01-10  12.37  1628977  12.95  12.72   \n",
+      "4  12.25  1673567689274 2023-01-11   12.7  7754541  16.05  15.83   \n",
       "\n",
       "                  instrument  \n",
       "0  AVAXUSDT-OKX-00000000-FUT  \n",
@@ -414,29 +414,19 @@
       "2  AVAXUSDT-OKX-00000000-FUT  \n",
       "3  AVAXUSDT-OKX-00000000-FUT  \n",
       "4  AVAXUSDT-OKX-00000000-FUT  \n",
-      "Saved price data for Avalanche to ./data\\price\\09_Avalanche_price.csv\n",
-      "Columns in DataFrame for Polygon: RangeIndex(start=0, stop=0, step=1)\n",
-      "Empty DataFrame\n",
-      "Columns: []\n",
-      "Index: []\n",
-      "No valid data found for Polygon. Skipping.\n",
-      "Columns in DataFrame for Aptos: Index(['low', 'updatedAt', 'timestamp', 'open', 'volume', 'high', 'close',\n",
-      "       'instrument'],\n",
-      "      dtype='object')\n",
-      "      low      updatedAt  timestamp    open    volume    high   close  \\\n",
-      "0   3.865  1669161534141 2022-11-21  4.0727  10424848  4.1545  4.0638   \n",
-      "1  3.8517  1669247709077 2022-11-22  4.0641  11278009  4.5366  4.3137   \n",
-      "2  4.2436  1669334060904 2022-11-23  4.2948   9468599  4.6051  4.4414   \n",
-      "3  4.2103  1669420372538 2022-11-24  4.4095  11955012    4.73    4.44   \n",
-      "4  4.2556  1669506773696 2022-11-25  4.3526   8295973  4.5583  4.4282   \n",
-      "\n",
-      "                 instrument  \n",
-      "0  APTUSDT-OKX-00000000-FUT  \n",
-      "1  APTUSDT-OKX-00000000-FUT  \n",
-      "2  APTUSDT-OKX-00000000-FUT  \n",
-      "3  APTUSDT-OKX-00000000-FUT  \n",
-      "4  APTUSDT-OKX-00000000-FUT  \n",
-      "Saved price data for Aptos to ./data\\price\\11_Aptos_price.csv\n"
+      "Saved price data for Avalanche to ./data\\price\\09_Avalanche_price.csv\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'NoneType' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 13\u001b[0m\n\u001b[0;32m     10\u001b[0m     fetch_historical_data(chain_name, metric)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m chain_name \u001b[38;5;129;01min\u001b[39;00m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n\u001b[1;32m---> 13\u001b[0m     fetch_price_data(chain_name)\n",
+      "Cell \u001b[1;32mIn[4], line 47\u001b[0m, in \u001b[0;36mfetch_price_data\u001b[1;34m(chain_name)\u001b[0m\n\u001b[0;32m     43\u001b[0m start_date_str \u001b[38;5;241m=\u001b[39m start_date\u001b[38;5;241m.\u001b[39mstrftime(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mY-\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mm-\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mH-\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mM\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     45\u001b[0m instrument_code \u001b[38;5;241m=\u001b[39m mapping\u001b[38;5;241m.\u001b[39mget(chain_name)\n\u001b[1;32m---> 47\u001b[0m price_data \u001b[38;5;241m=\u001b[39m price_bar_query(instrument_code \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m|1440\u001b[39m\u001b[38;5;124m'\u001b[39m, start_date_str, today_str, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlive\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     48\u001b[0m price_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(price_data)\n\u001b[0;32m     49\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mColumns in DataFrame for \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mchain_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mprice_df\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m) \n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'NoneType' and 'str'"
      ]
     }
    ],
@@ -520,8 +510,8 @@
      "output_type": "stream",
      "text": [
       "Sample data entry: {'UNIT': 'DAY', 'TIMESTAMP': 1727136000, 'TYPE': '914', 'MARKET': 'okex', 'INSTRUMENT': 'POL-USDT-SWAP', 'MAPPED_INSTRUMENT': 'POL-USDT-VANILLA-PERPETUAL', 'INDEX_UNDERLYING': 'POL', 'QUOTE_CURRENCY': 'USDT', 'SETTLEMENT_CURRENCY': 'USDT', 'CONTRACT_CURRENCY': 'POL', 'DENOMINATION_TYPE': 'VANILLA', 'INDEX_UNDERLYING_ID': 10343, 'QUOTE_CURRENCY_ID': 7, 'SETTLEMENT_CURRENCY_ID': 7, 'CONTRACT_CURRENCY_ID': 10343, 'TRANSFORM_FUNCTION': '', 'OPEN': 0.417, 'HIGH': 0.417, 'LOW': 0.3905, 'CLOSE': 0.4096, 'FIRST_TRADE_TIMESTAMP': 1727166616, 'LAST_TRADE_TIMESTAMP': 1727222160, 'FIRST_TRADE_PRICE': 0.417, 'HIGH_TRADE_PRICE': 0.417, 'HIGH_TRADE_TIMESTAMP': 1727166616, 'LOW_TRADE_PRICE': 0.3905, 'LOW_TRADE_TIMESTAMP': 1727166616, 'LAST_TRADE_PRICE': 0.4096, 'TOTAL_TRADES': 5847, 'TOTAL_TRADES_BUY': 3503, 'TOTAL_TRADES_SELL': 2344, 'TOTAL_TRADES_UNKNOWN': 0, 'NUMBER_OF_CONTRACTS': 363952, 'VOLUME': 3639520, 'QUOTE_VOLUME': 1479825.706, 'VOLUME_BUY': 1766230, 'QUOTE_VOLUME_BUY': 718157.133, 'VOLUME_SELL': 1873290, 'QUOTE_VOLUME_SELL': 761668.573, 'VOLUME_UNKNOWN': 0, 'QUOTE_VOLUME_UNKNOWN': 0}\n",
-      "Sample data entry: {'UNIT': 'DAY', 'TIMESTAMP': 1661472000, 'TYPE': '914', 'MARKET': 'bitmex', 'INSTRUMENT': 'MATICUSDT', 'MAPPED_INSTRUMENT': 'MATIC-USDT-VANILLA-PERPETUAL', 'INDEX_UNDERLYING': 'MATIC', 'QUOTE_CURRENCY': 'USDT', 'SETTLEMENT_CURRENCY': 'USDT', 'CONTRACT_CURRENCY': 'MATIC', 'DENOMINATION_TYPE': 'VANILLA', 'INDEX_UNDERLYING_ID': 4, 'QUOTE_CURRENCY_ID': 7, 'SETTLEMENT_CURRENCY_ID': 7, 'CONTRACT_CURRENCY_ID': 4, 'TRANSFORM_FUNCTION': '', 'OPEN': 0.8172, 'HIGH': 0.8443, 'LOW': 0.7509, 'CLOSE': 0.7641, 'FIRST_TRADE_TIMESTAMP': 1661472041, 'LAST_TRADE_TIMESTAMP': 1661558370, 'FIRST_TRADE_PRICE': 0.8152, 'HIGH_TRADE_PRICE': 0.8443, 'HIGH_TRADE_TIMESTAMP': 1661523012, 'LOW_TRADE_PRICE': 0.7509, 'LOW_TRADE_TIMESTAMP': 1661557591, 'LAST_TRADE_PRICE': 0.7641, 'TOTAL_TRADES': 1876, 'TOTAL_TRADES_BUY': 918, 'TOTAL_TRADES_SELL': 958, 'TOTAL_TRADES_UNKNOWN': 0, 'NUMBER_OF_CONTRACTS': 222540000, 'VOLUME': 2225400, 'QUOTE_VOLUME': 1786140.375, 'VOLUME_BUY': 1179220, 'QUOTE_VOLUME_BUY': 950344.263, 'VOLUME_SELL': 1046180, 'QUOTE_VOLUME_SELL': 835796.112, 'VOLUME_UNKNOWN': 0, 'QUOTE_VOLUME_UNKNOWN': 0}\n",
-      "Data saved to 11_Polygon_price.csv\n"
+      "Failed to fetch data. HTTP status code: 404\n",
+      "Fail to fetch enough data.\n"
      ]
     }
    ],
