--- a/spot_volume/data_process.ipynb
+++ b/spot_volume/data_process.ipynb
@@ -465,6 +465,91 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Data aggregated by instrument and resampled with 4h interval.\n",
+      "  instrument                time      open      high       low     close  \\\n",
+      "0  SATS-USDC 2024-11-26 20:00:00  0.000240  0.000240  0.000240  0.000240   \n",
+      "1  SATS-USDC 2024-11-27 00:00:00  0.000240  0.000243  0.000236  0.000241   \n",
+      "2  SATS-USDC 2024-11-27 04:00:00  0.000241  0.000244  0.000239  0.000242   \n",
+      "3  SATS-USDC 2024-11-27 08:00:00  0.000242  0.000243  0.000238  0.000240   \n",
+      "4  SATS-USDC 2024-11-27 12:00:00  0.000240  0.000248  0.000236  0.000246   \n",
+      "\n",
+      "        volume  quote_volume  \n",
+      "0    2286488.0    548.384741  \n",
+      "1   32626874.0   7826.867729  \n",
+      "2  301297338.0  72538.193348  \n",
+      "3  198764380.0  47849.462956  \n",
+      "4  141960332.0  34273.837184  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "def process_spot_volume_data(df: pd.DataFrame, time_interval: str = \"1D\", group_by_instrument: bool = True) -> tuple:\n",
+    "    '''Process spot trading volume data with aggregation\n",
+    "\n",
+    "     Args:\n",
+    "         df(pd.DataFrame): DataFrame containing spot volume data\n",
+    "         time_interval(str): Aggregation time interval (default: '1D' for daily).\n",
+    "                            Examples: '4h' (4 hours), '12h' (12 hours), '1D' (daily)\n",
+    "         group_by_instrument(bool): Whether to aggregate per instrument (default: False)\n",
+    "\n",
+    "     Return:\n",
+    "         Tuple (processed DataFrame, aggregation description)\n",
+    "         \n",
+    "     Usage:\n",
+    "         df = pd.read_csv(\"Binance_spot_volume_1000h.csv\")\n",
+    "         df[\"time\"] = pd.to_datetime(df[\"time\"])  \n",
+    "         df_4h, desc_4h = process_spot_volume_data(df, time_interval=\"4h\", group_by_instrument=True)\n",
+    "         print(desc_4h)\n",
+    "         print(df_4h.head())\n",
+    "    '''\n",
+    "    if \"time\" not in df.columns:\n",
+    "        raise ValueError(\"❌ The DataFrame must contain a 'time' column.\")\n",
+    "\n",
+    "    df.set_index(\"time\", inplace=True)\n",
+    "\n",
+    "    agg_methods = {\n",
+    "        \"open\": \"first\",\n",
+    "        \"high\": \"max\",\n",
+    "        \"low\": \"min\",\n",
+    "        \"close\": \"last\",\n",
+    "        \"volume\": \"sum\",\n",
+    "        \"quote_volume\": \"sum\"\n",
+    "    }\n",
+    "    if group_by_instrument:\n",
+    "        grouped_df = df.groupby(\"instrument\").resample(time_interval).agg(agg_methods)\n",
+    "        grouped_df = grouped_df.reset_index()\n",
+    "        # 去除 instrument 列中的前缀，在这个使用过程中输出会给instrument加上1000前缀，原因是instrument\n",
+    "        # 在groupby的时候被当做了index，会被转化为string类型等格式变化造成。\n",
+    "        grouped_df[\"instrument\"] = grouped_df[\"instrument\"].str.replace(\"1000\", \"\")\n",
+    "        desc = f\"Data aggregated by instrument and resampled with {time_interval} interval.\"\n",
+    "    else:\n",
+    "        grouped_df = df.resample(time_interval).agg(agg_methods).reset_index()\n",
+    "        desc = f\"Data resampled with {time_interval} interval (aggregated across all instruments).\"\n",
+    "    \n",
+    "    print(f\"✅ {desc}\")\n",
+    "    \n",
+    "    return grouped_df, desc\n",
+    "\n",
+    "\n",
+    "test_biance_data = pd.read_csv(\"C:/Users/YuweiCao/Documents/spot_volume_result/binance_spot_volume_2000h.csv\")\n",
+    "\n",
+    "result_biance_data, desc = process_spot_volume_data(test_biance_data, time_interval=\"4h\", group_by_instrument=True)\n",
+    "\n",
+    "print(result_biance_data.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
